<resources>
    <string name="app_name">Palette Studio</string>
    <string name="upload_url">https://simple-life-solutions.com/ceye/getcolours.php</string>
    <string name="color_picker_button_chooser">Add To Palette: </string>


    <string name="signin">Sign In</string>
    <string name="image_name"><i>Save as</i></string>
    <string name="add_to_new_palette"><i>Add To New Palette</i></string>
    <string name="add_to_existing_palette"><i>Add To Existing Palette</i></string>

    <!--region.................custom camera ..........................-->
    <string name="start_image_capture">Take a New Picture</string>
    <string name="capture_image">Snap it!</string>
    <string name="save_image_new">Save To New Palette</string>
    <string name="done">Done</string>
    <!--endregion-->

    <!-- region................. Common fileds used ...................  -->
    <string name="common_log">LogColorMatch</string>

    <!--endregion-->

    <!-- region ................. Menu items for details list activity .................... -->
    <string name="share">share</string>
    <string name="options">customcamera_menu</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <!--endregion-->

    <!--region .....................for camera2 fragment............................................ -->
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <!--endregion-->

    <!--region .....................for navigation drawer items............................................ -->
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="subscribe_unsubscribe">Subscribe/Unsubscribe</string>
    <string name="permissions">Permissions</string>
    <string name="storage_options">Storage options</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="webpage">Webpage</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="about_detail">Palette Studio brought to you by \'Simple Life Solutions\'   Please susbcribe and let us know what you think of our efforts.</string>
    <string name="share_send_to">share with</string>
    <!--endregion-->


    <!--region ........................... for downloading shared palette ................................. -->
        <string name="default_notification_channel_id">paletteStudio_downloadPlt01</string>
        <string name="default_notification_channel_title">Notification for downloading shared palette.</string>
    <!--endregion -->

</resources>
