<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Settings">
        <menu>
           <!-- <item android:id="@+id/mn_subscribe"
                android:icon="@drawable/ic_subscribe"
                android:title="@string/subscribe_unsubscribe"/>-->
            <item android:id="@+id/mn_permissions"
                android:icon="@drawable/ic_permission"
                android:title="@string/permissions"/>
       <!--     <item android:id="@+id/mn_options"
                android:icon="@drawable/ic_storage"
                android:title="@string/storage_options"/>-->
            <item android:id="@+id/mn_uninstall"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"/>
        </menu>
    </item>


    <group>
        <item android:id="@+id/mn_about"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/about" />
        <item android:id="@+id/mn_support"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/support" />
        <item android:id="@+id/mn_webpage"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/webpage" />
        <item android:id="@+id/mn_privacy"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/privacy_policy" />
    </group>



</menu>